k8s/infra/gateway-api/gateway/envs/poc/gw-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.6.82
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "poc-unifi.poc.iseja.net"
      name: unifi
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
